--- a/src/4_deploy.ipynb
+++ b/src/4_deploy.ipynb
@@ -93,9 +93,13 @@
     }
    },
    "source": [
-    "# Prediction Tool\n",
+    "# Tools\n",
     "\n",
-    "Let's declare a parameterized function that queries the model for a specific well and time range. We have also defined other tools using SQL to get information about our well."
+    "We could use something like Genie to talk with out data, but when the structures are simple, it makes sense to use a more lightweight approach. This is a simple example of using a SQL query as a tool.\n",
+    "\n",
+    "Let's declare a parameterized function that queries the model for a specific well and time range. We have also defined other tools using SQL to get information about our well.\n",
+    "\n",
+    "We have defined a lot more tools as SQL queries in ../fixtures"
    ]
   },
   {
@@ -103,9 +107,13 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "266825a7-7217-4813-a013-4b8d48aed313",
+     "nuid": "5e9ddb78-9e66-4174-8ae3-8118b42759f3",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -113,32 +121,90 @@
    },
    "outputs": [],
    "source": [
-    "spark.sql(\"\"\"\n",
-    "    CREATE OR REPLACE FUNCTION shm.3w.predict_state(\n",
-    "        p_well_number INT DEFAULT 16 COMMENT \"Well number between 1 and 50, must be integer\", \n",
-    "        p_num_minutes INT DEFAULT 1 COMMENT \"Number of minutes to predict, must be under 30\"\n",
-    "    )\n",
-    "    RETURNS TABLE (\n",
-    "        timestamp TIMESTAMP,\n",
-    "        prediction DOUBLE \n",
-    "    )\n",
-    "    COMMENT \"Generates hydrate predictions for the next couple of minutes\"\n",
-    "    RETURN\n",
-    "    SELECT \n",
-    "        f.timestamp,\n",
-    "        AI_QUERY(\n",
-    "            'hydrate_xgboost',\n",
-    "            request => NAMED_STRUCT(\n",
-    "            'T-JUS-CKP', f.`T-JUS-CKP`,\n",
-    "            'T-TPT', f.`T-TPT`,\n",
-    "            'P-TPT', f.`P-TPT`,\n",
-    "            'P-MON-CKP', f.`P-MON-CKP`,\n",
-    "            'P-PDG', f.`P-PDG`\n",
-    "            )\n",
-    "        ) AS prediction\n",
-    "    FROM shm.3w.filter_well_data(p_well_number, p_num_minutes)\n",
-    "\"\"\"\n",
-    ")"
+    "%sql\n",
+    "CREATE OR REPLACE FUNCTION shm.3w.latest_n_obs(\n",
+    "  well_number_param BIGINT DEFAULT -1 COMMENT \"Well number between 1 and 50, must be an integer\",\n",
+    "  n_obs_param INT DEFAULT 5 COMMENT \"Number of observations to return\")\n",
+    "RETURNS TABLE (\n",
+    "  well_number DOUBLE, \n",
+    "  timestamp TIMESTAMP,\n",
+    "  `T-JUS-CKP` DOUBLE,\n",
+    "  `T-TPT` DOUBLE,\n",
+    "  `P-TPT` DOUBLE,\n",
+    "  `P-MON-CKP` DOUBLE,\n",
+    "  `P-PDG` DOUBLE,\n",
+    "  `QGL` DOUBLE\n",
+    "  )\n",
+    "COMMENT \"Gives the latest n observations for the well. If well_number_param is -1, returns the most recent n observations for all wells.\"\n",
+    "RETURN\n",
+    "SELECT well_number, timestamp, `T-JUS-CKP`, `T-TPT`, `P-TPT`, `P-MON-CKP`, `P-PDG`, `QGL`\n",
+    "FROM (\n",
+    "  SELECT \n",
+    "    well_number,\n",
+    "    timestamp,\n",
+    "    `T-JUS-CKP`,\n",
+    "    `T-TPT`,\n",
+    "    `P-TPT`,\n",
+    "    `P-MON-CKP`,\n",
+    "    `P-PDG`,\n",
+    "    `QGL`,\n",
+    "    ROW_NUMBER() OVER (PARTITION BY well_number ORDER BY timestamp DESC) as row_num\n",
+    "  FROM shm.3w.well_data\n",
+    "  WHERE (well_number_param = -1 OR well_number = well_number_param)\n",
+    "  ORDER BY timestamp DESC\n",
+    "  LIMIT 1000 -- Use a large constant limit\n",
+    ") subquery\n",
+    "WHERE row_num <= n_obs_param"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e7a1c3d3-ae4e-4b55-b655-d4b084ab1188",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE OR REPLACE FUNCTION shm.3w.predict_state(\n",
+    "    well_number_param INT DEFAULT -1 COMMENT \"Well number between 1 and 50, must be integer. Select -1 to get all wells\", \n",
+    "    n_obs_param INT DEFAULT 10 COMMENT \"Number of observations to predict\"\n",
+    ")\n",
+    "RETURNS TABLE (\n",
+    "    well_number INTEGER,\n",
+    "    timestamp TIMESTAMP,\n",
+    "    prediction INTEGER \n",
+    ")\n",
+    "COMMENT \"Generates hydrate predictions for the latest sensor readings\"\n",
+    "RETURN\n",
+    "SELECT \n",
+    "    well_number,\n",
+    "    timestamp,\n",
+    "    AI_QUERY(\n",
+    "        'shm_3w_lightgbm',\n",
+    "        request => NAMED_STRUCT(\n",
+    "        'P-PDG', `latest_n_obs`.`P-PDG`,\n",
+    "        'P-TPT', `latest_n_obs`.`P-TPT`,\n",
+    "        'T-TPT', `latest_n_obs`.`T-TPT`,\n",
+    "        'P-MON-CKP', `latest_n_obs`.`P-MON-CKP`,\n",
+    "        'T-JUS-CKP', `latest_n_obs`.`T-JUS-CKP`,\n",
+    "        'QGL', `latest_n_obs`.`QGL`,\n",
+    "        'well_number', `latest_n_obs`.`well_number`\n",
+    "        ),\n",
+    "        returnType => 'DOUBLE'\n",
+    "    ) AS prediction\n",
+    "FROM shm.3w.latest_n_obs(well_number_param, n_obs_param)"
    ]
   }
  ],
@@ -159,6 +225,12 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 8154626112670676,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 2
    },
    "notebookName": "4_deploy",
