--- a/src/5_agentify.ipynb
+++ b/src/5_agentify.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2d19dcef-f0d6-4ec6-9882-7e7dfc379f54",
      "showTitle": false,
@@ -24,7 +27,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "af85a45b-9b43-4cd5-904f-6ba1bc6339d7",
      "showTitle": false,
@@ -41,7 +47,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "37567088-2544-43dd-aac6-e303861603e3",
      "showTitle": false,
@@ -59,7 +68,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ebf7899a-2f32-4683-9bbb-76aa6660d76d",
      "showTitle": false,
@@ -69,46 +81,18 @@
    },
    "outputs": [],
    "source": [
-    "%sh uv pip install ."
+    "%sh uv pip install ../.\n",
+    "%restart_python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "25a2b344-f82e-4340-b74d-35d1c0005b9d",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## Tools"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "1c408751-a477-47fc-b300-4a70935a6659",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "We could use something like Genie to talk with out data, but when the structures are simple, it makes sense to use a more lightweight approach. This is a simple example of using a SQL query as a tool."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "89060d7e-b525-427b-8641-4a7025531eec",
      "showTitle": false,
@@ -127,7 +111,33 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1a3e169a-921c-4142-9a8e-5b1bbc18c980",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from hydrate.utils import get_config_path, DotConfig\n",
+    "config_path = get_config_path()\n",
+    "config = DotConfig(config_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8d680c83-3299-40dc-bc7d-ed19e14e3f60",
      "showTitle": false,
@@ -138,7 +148,7 @@
    "outputs": [],
    "source": [
     "from agent import AGENT\n",
-    "AGENT.predict({\"messages\": [{\"role\": \"user\", \"content\": \"Hello!\"}]})"
+    "AGENT.predict({\"messages\": [{\"role\": \"user\", \"content\": \"Tell me the current status of Well 19\"}]})"
    ]
   },
   {
@@ -146,7 +156,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "68081c53-76ec-4c27-ae2a-6044f5a57fe8",
      "showTitle": false,
@@ -157,7 +170,7 @@
    "outputs": [],
    "source": [
     "for event in AGENT.predict_stream(\n",
-    "    {\"messages\": [{\"role\": \"user\", \"content\": \"What is 5+5 in python\"}]}\n",
+    "    {\"messages\": [{\"role\": \"user\", \"content\": \"Tell me about Well 19\"}]}\n",
     "):\n",
     "    print(event, \"-----------\\n\")\n"
    ]
@@ -166,7 +179,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "bbb474d3-c065-4b0d-ac6f-3e1acb55b066",
      "showTitle": false,
@@ -191,7 +207,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e5222326-f803-446f-bb0c-9f1ca49fc26b",
      "showTitle": false,
@@ -201,7 +220,6 @@
    },
    "outputs": [],
    "source": [
-    "# Determine Databricks resources to specify for automatic auth passthrough at deployment time\n",
     "import mlflow\n",
     "from agent import LLM_ENDPOINT_NAME, tools\n",
     "from databricks_langchain import VectorSearchRetrieverTool\n",
@@ -209,20 +227,25 @@
     "from pkg_resources import get_distribution\n",
     "from unitycatalog.ai.langchain.toolkit import UnityCatalogTool\n",
     "\n",
-    "resources = [DatabricksServingEndpoint(endpoint_name=LLM_ENDPOINT_NAME)]\n",
+    "mlflow.set_registry_uri(\"databricks-uc\")\n",
+    "\n",
+    "uc_model_name = f\"{config.catalog}.{config.schema}.{config.agentify.agent_name}\"\n",
+    "\n",
+    "resources = [\n",
+    "    DatabricksServingEndpoint(endpoint_name=LLM_ENDPOINT_NAME),\n",
+    "    DatabricksServingEndpoint(endpoint_name='shm_3w_lightgbm')\n",
+    "    ]\n",
     "for tool in tools:\n",
     "    if isinstance(tool, VectorSearchRetrieverTool):\n",
     "        resources.extend(tool.resources)\n",
     "    elif isinstance(tool, UnityCatalogTool):\n",
-    "        # TODO: If the UC function includes dependencies like external connection or vector search, please include them manually.\n",
-    "        # See the TODO in the markdown above for more information.\n",
     "        resources.append(DatabricksFunction(function_name=tool.uc_function_name))\n",
     "\n",
     "input_example = {\n",
     "    \"messages\": [\n",
     "        {\n",
     "            \"role\": \"user\",\n",
-    "            \"content\": \"What are the predictions for well 15 for the next minute?\"\n",
+    "            \"content\": \"What is the current status of Well 19?\"\n",
     "        }\n",
     "    ]\n",
     "}\n",
@@ -233,36 +256,14 @@
     "        python_model=\"agent.py\",\n",
     "        input_example=input_example,\n",
     "        resources=resources,\n",
+    "        registered_model_name=uc_model_name,\n",
     "        pip_requirements=[\n",
     "            f\"databricks-connect=={get_distribution('databricks-connect').version}\",\n",
     "            f\"mlflow=={get_distribution('mlflow').version}\",\n",
     "            f\"databricks-langchain=={get_distribution('databricks-langchain').version}\",\n",
     "            f\"langgraph=={get_distribution('langgraph').version}\",\n",
     "        ],\n",
-    "    )\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "ff5aada3-5d0b-4ac7-864c-7d7a55555ca0",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    },
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "## Evaluate the Agent\n",
-    "\n",
-    "You can edit the requests or expected responses in your evaluation dataset and run evaluation as you iterate your agent, leveraging mlflow to track the computed quality metrics.\n",
-    "\n",
-    "Evaluate your agent with one of our [predefined LLM scorers](https://learn.microsoft.com/azure/databricks/mlflow3/genai/eval-monitor/predefined-judge-scorers), or try adding [custom metrics](https://learn.microsoft.com/azure/databricks/mlflow3/genai/eval-monitor/custom-scorers).\n"
+    "    )"
    ]
   },
   {
@@ -270,138 +271,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "03d997c8-b515-4103-b362-42226ccff379",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import mlflow\n",
-    "from mlflow.genai.scorers import RelevanceToQuery, Safety, RetrievalRelevance, RetrievalGroundedness\n",
-    "from databricks import agents\n",
-    "\n",
-    "eval_dataset = [\n",
-    "    {\n",
-    "        \"inputs\": {\n",
-    "            \"messages\": [\n",
-    "                {\n",
-    "                    \"role\": \"user\",\n",
-    "                    \"content\": \"What are the predictions for well 15 for the next minute?\"\n",
-    "                }\n",
-    "            ]\n",
-    "        },\n",
-    "        \"expected_response\": None\n",
-    "    }\n",
-    "]\n",
-    "\n",
-    "eval_results = mlflow.genai.evaluate(\n",
-    "    data=eval_dataset,\n",
-    "    predict_fn=lambda messages: AGENT.predict({\"messages\": messages}),\n",
-    "    scorers=[RelevanceToQuery(), Safety()], # add more scorers here if they're applicable\n",
-    ")\n",
-    "\n",
-    "# Review the evaluation results in the MLfLow UI (see console output)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "9883713f-2363-4dd6-a162-92f3dfb9afc9",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    },
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "## Perform pre-deployment validation of the agent\n",
-    "\n",
-    "Before registering and deploying the agent, we perform pre-deployment checks via the [mlflow.models.predict()](https://mlflow.org/docs/latest/python_api/mlflow.models.html#mlflow.models.predict) API. See [documentation](https://learn.microsoft.com/azure/databricks/machine-learning/model-serving/model-serving-debug#validate-inputs) for details\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "aa570b58-76b9-43ad-a898-30c15a143d36",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "mlflow.models.predict(\n",
-    "    model_uri=f\"runs:/{logged_agent_info.run_id}/agent\",\n",
-    "    input_data={\"messages\": [{\"role\": \"user\", \"content\": \"Hello!\"}]},\n",
-    "    env_manager=\"uv\",\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "ececc650-7f1a-48d7-b11a-a87d9b457a35",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    },
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "## Register and Deploy the Agent\n",
-    "\n",
-    "Once we register the model to Unity Catalog, serving it becomes quite simple. See [docs](https://learn.microsoft.com/azure/databricks/generative-ai/deploy-agent) for details"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "0273851b-926b-4e7f-969a-b4af03336151",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "mlflow.set_registry_uri(\"databricks-uc\")\n",
-    "\n",
-    "UC_MODEL_NAME = f\"{config.catalog}.{config.schema}.{config.agentify.agent_name}\"\n",
-    "\n",
-    "# register the model to UC\n",
-    "uc_registered_model_info = mlflow.register_model(\n",
-    "    model_uri=logged_agent_info.model_uri, name=UC_MODEL_NAME\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9397a589-3a27-4dac-bfea-38e93e442022",
      "showTitle": false,
@@ -411,19 +284,40 @@
    },
    "outputs": [],
    "source": [
+    "from mlflow.deployments import get_deploy_client\n",
+    "from databricks import agents\n",
     "\n",
-    "agents.deploy(UC_MODEL_NAME, uc_registered_model_info.version, tags = {\"endpointSource\": \"playground\"})\n"
+    "agents.deploy(\n",
+    "  uc_model_name, \n",
+    "  logged_agent_info.registered_model_version, \n",
+    "  tags={\"endpointSource\": \"playground\"}\n",
+    ")"
    ]
   }
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
-   "environmentMetadata": null,
+   "environmentMetadata": {
+    "base_environment": "",
+    "environment_version": "3"
+   },
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 8154626112669518,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 2
    },
    "notebookName": "5_agentify",
