move to well_agent

--- a/src/2_process.ipynb
+++ b/src/2_process.ipynb
@@ -58,10 +58,22 @@
    },
    "outputs": [],
    "source": [
-    "from hydrate.utils import get_config_path, DotConfig\n",
+    "from well_agent.utils import get_config_path, DotConfig\n",
     "config_path = get_config_path()\n",
     "config_path = 'config.yaml'\n",
     "config = DotConfig(config_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from databricks.connect import DatabricksSession as SparkSession\n",
+    "\n",
+    "if \"spark\" not in locals():\n",
+    "    spark = SparkSession.builder.serverless(True).getOrCreate()"
    ]
   },
   {
@@ -243,7 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "from hydrate.process import clean_data_spark"
+    "from well_agent.process import clean_data_spark"
    ]
   },
   {
