--- a/src/5_agentify.ipynb
+++ b/src/5_agentify.ipynb
@@ -86,6 +86,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from databricks.connect import DatabricksSession as SparkSession\n",
+    "\n",
+    "if \"spark\" not in locals():\n",
+    "    spark = SparkSession.builder.serverless(True).getOrCreate()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -104,29 +116,6 @@
     "## Agent\n",
     "\n",
     "Let's test the agent. Since this notebook called `mlflow.langchain.autolog()` you can view the trace for each step the agent takes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "1a3e169a-921c-4142-9a8e-5b1bbc18c980",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from hydrate.utils import get_config_path, DotConfig\n",
-    "config_path = get_config_path()\n",
-    "config = DotConfig(config_path)"
    ]
   },
   {
