--- a/src/1_download.ipynb
+++ b/src/1_download.ipynb
@@ -65,6 +65,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from databricks.connect import DatabricksSession as SparkSession\n",
+    "\n",
+    "if \"spark\" not in locals():\n",
+    "    spark = SparkSession.builder.serverless(True).getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -80,7 +92,7 @@
    },
    "outputs": [],
    "source": [
-    "from hydrate.utils import get_config_path, DotConfig\n",
+    "from well_agent.utils import get_config_path, DotConfig\n",
     "config_path = get_config_path()\n",
     "config = DotConfig(config_path)"
    ]
@@ -1603,7 +1615,7 @@
     }
    ],
    "source": [
-    "from hydrate.download import DatasetDownloader\n",
+    "from well_agent.download import DatasetDownloader\n",
     "downloader = DatasetDownloader(config)\n",
     "downloader.download_dataset()"
    ]
