--- a/src/3_train.ipynb
+++ b/src/3_train.ipynb
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "from hydrate.utils import get_config_path, DotConfig\n",
+    "from well_agent.utils import get_config_path, DotConfig\n",
     "config_path = get_config_path()\n",
     "config = DotConfig(config_path)"
    ]
@@ -102,7 +102,9 @@
    "outputs": [],
    "source": [
     "from databricks.connect import DatabricksSession as SparkSession\n",
-    "spark = SparkSession.builder.getOrCreate()"
+    "\n",
+    "if \"spark\" not in locals():\n",
+    "    spark = SparkSession.builder.serverless(True).getOrCreate()"
    ]
   },
   {
@@ -145,48 +147,6 @@
     "  .filter(df.well_number.isin([19, 29, 31, 28, 25]))\n",
     "  .toPandas()\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "7b279a4d-5c09-4ba6-9095-fef632af6339",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "ml_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a30d1c7d-9aa2-4ebf-b391-fb70347134c9",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "ml_df.columns"
    ]
   },
   {
